force-app/main/default/objects/Opportunity/fields/MarketingChannel__c.field-meta.xml
<CustomField>
    <fullName>MarketingChannel__c</fullName>
    <label>Marketing Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA: Demand Gen</fullName>
            </value>
            <value>
                <fullName>NA: Online</fullName>
            </value>
            <value>
                <fullName>NA: Partner</fullName>
            </value>
            <value>
                <fullName>NA: Base</fullName>
            </value>
            <value>
                <fullName>NA: Diamond</fullName>
            </value>
            <value>
                <fullName>NA: Strat Comms</fullName>
            </value>
            <value>
                <fullName>NA: Online Legacy</fullName>
            </value>
            <value>
                <fullName>CANADA: English</fullName>
            </value>
            <value>
                <fullName>CANADA: French</fullName>
            </value>
            <value>
                <fullName>CANADA: Partner</fullName>
            </value>
            <value>
                <fullName>CANADA: Baking</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>