force-app/main/default/objects/Opportunity/fields/Month_Index__c.field-meta.xml
<CustomField>
    <fullName>Month_Index__c</fullName>
    <formula>IF(YEAR(DATEVALUE( CreatedDate )) &lt;&gt; YEAR(TODAY()), -MONTH(DATEVALUE(CreatedDate)) ,MONTH(DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>