force-app/main/default/objects/Opportunity/fields/Monthly_Web_Usage__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Web_Usage__c</fullName>
    <inlineHelpText>Indicate number of web minutes prospect currently uses each month.</inlineHelpText>
    <label>Monthly Web Usage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>