force-app/main/default/objects/Opportunity/fields/MRR_Total__c.field-meta.xml
<CustomField>
    <fullName>MRR_Total__c</fullName>
    <formula>IF(RecordTypeId = &apos;0121B000001hgTt&apos; &amp;&amp; ISPICKVAL(MRR__c,&quot;Yes&quot;), (TPSummaryofAnnualizedProducts__c/12) + TPSummaryofNonAnnualizedProducts__c,
IF(RecordTypeId = &apos;0121B000001q5Wh&apos; &amp;&amp; NOT(ISPICKVAL(Service_Term__c, &quot;1 Time Event&quot;)), Amount/12,
IF(RecordTypeId = &apos;0121B000001q5Wi&apos; &amp;&amp; NOT(ISPICKVAL(Service_Term__c, &quot;1 Time Event&quot;)), Amount/12,
Total_MRR_Formula__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>