force-app/main/default/objects/Opportunity/fields/NCS_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>NCS_Generated_Date__c</fullName>
    <description>Not on any page layout - access to all</description>
    <label>NCS Generated Date</label>
    <type>DateTime</type>
</CustomField>