force-app/main/default/objects/Opportunity/fields/NetSuite_Warning__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Warning__c</fullName>
    <label>NetSuite Warning</label>
    <type>TextArea</type>
</CustomField>