force-app/main/default/objects/Opportunity/fields/New_EUM_Servers__c.field-meta.xml
<CustomField>
    <fullName>New_EUM_Servers__c</fullName>
    <inlineHelpText>Enter number of new Exchange UM Servers</inlineHelpText>
    <label>New EUM Servers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>