force-app/main/default/objects/Opportunity/fields/New_EV_Seats__c.field-meta.xml
<CustomField>
    <fullName>New_EV_Seats__c</fullName>
    <label>New EV Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>