force-app/main/default/objects/Opportunity/fields/New_SQL_Servers__c.field-meta.xml
<CustomField>
    <fullName>New_SQL_Servers__c</fullName>
    <label>New SQL Servers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>