force-app/main/default/objects/Opportunity/fields/New_Windows_Servers__c.field-meta.xml
<CustomField>
    <fullName>New_Windows_Servers__c</fullName>
    <label>New Windows Servers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>