force-app/main/default/objects/Opportunity/fields/Next_Steps_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_Last_Modified_Date__c</fullName>
    <label>Next Steps Last Modified Date</label>
    <type>Date</type>
</CustomField>