force-app/main/default/objects/Opportunity/fields/No_of_SfB__c.field-meta.xml
<CustomField>
    <fullName>No_of_SfB__c</fullName>
    <label>No&apos; of SfB Online Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>