force-app/main/default/objects/Opportunity/fields/NoISTNeeded__c.field-meta.xml
<CustomField>
    <fullName>NoISTNeeded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only IST members can see and select this field, only select it AFTER you have audited the Opportunity and find it as not needing an Implementation request.</inlineHelpText>
    <label>No IST Needed</label>
    <type>Checkbox</type>
</CustomField>