force-app/main/default/objects/Opportunity/fields/NS_Sync__c.field-meta.xml
<CustomField>
    <fullName>NS_Sync__c</fullName>
    <label>NetSuite Sync</label>
    <type>TextArea</type>
</CustomField>