force-app/main/default/objects/Opportunity/fields/of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>of_Opportunities__c</fullName>
    <description>Power of One</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>