force-app/main/default/objects/Opportunity/fields/Old_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Project_Number__c</fullName>
    <label>Old Project Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>