force-app/main/default/objects/Opportunity/fields/Omnicom_Opp__c.field-meta.xml
<CustomField>
    <fullName>Omnicom_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Omnicom Opp</label>
    <type>Checkbox</type>
</CustomField>