force-app/main/default/objects/Opportunity/fields/ON24_Billing_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>ON24_Billing_Client_ID__c</fullName>
    <label>ON24 Billing Client ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>