force-app/main/default/objects/Opportunity/fields/ON24_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>ON24_Client_Name__c</fullName>
    <label>ON24 Client Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>