force-app/main/default/objects/Opportunity/fields/ON24_Event_Media__c.field-meta.xml
<CustomField>
    <fullName>ON24_Event_Media__c</fullName>
    <label>ON24 Event Media</label>
    <length>100</length>
    <type>Text</type>
</CustomField>