force-app/main/default/objects/Opportunity/fields/ON24_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>ON24_Reference_Number__c</fullName>
    <label>ON24 Reference Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>