force-app/main/default/objects/Opportunity/fields/One_Time_Revenue__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the Opportunity Amount is not a monthly recurring number.</inlineHelpText>
    <label>One Time Revenue</label>
    <type>Checkbox</type>
</CustomField>