force-app/main/default/objects/Opportunity/fields/Opp_Notes__c.field-meta.xml
<CustomField>
    <fullName>Opp_Notes__c</fullName>
    <inlineHelpText>Please make sure to start a new line each time you add notes to this section.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>