force-app/main/default/objects/Opportunity/fields/Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage__c</fullName>
    <label>x-Opp Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identify Target</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Info Session/Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Proposal/Price Quote</fullName>
            </value>
            <value>
                <fullName>Pilot/Trial/Evaluation</fullName>
            </value>
            <value>
                <fullName>Gain Commitment</fullName>
            </value>
            <value>
                <fullName>Negotiate Contract</fullName>
            </value>
            <value>
                <fullName>Closed Won - Implementation</fullName>
            </value>
            <value>
                <fullName>Closed Won - Implementation Complete</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Qualify Opportunity</fullName>
            </value>
            <value>
                <fullName>Negotiation/Verbal</fullName>
            </value>
            <value>
                <fullName>Develop Solution</fullName>
            </value>
            <value>
                <fullName>Develop Proposal</fullName>
            </value>
            <value>
                <fullName>Obtain Final Approvals</fullName>
            </value>
            <value>
                <fullName>Checkout</fullName>
            </value>
            <value>
                <fullName>Identify Target: Create demand, identify the prospect problem</fullName>
            </value>
            <value>
                <fullName>Qualify Opportunity: Ensure Opportunity is real</fullName>
            </value>
            <value>
                <fullName>Develop Solution: Problem/solution definition</fullName>
            </value>
            <value>
                <fullName>Win Theme: Devise strategy to win</fullName>
            </value>
            <value>
                <fullName>Develop Proposal: Create proposal to win</fullName>
            </value>
            <value>
                <fullName>Trial/Pilot: Client reviews solution under pre-agreed terms</fullName>
            </value>
            <value>
                <fullName>Gain Commitment: Receive verbal/written notification that client intends to award PGi</fullName>
            </value>
            <value>
                <fullName>Negotiate Contract: Self-explanatory</fullName>
            </value>
            <value>
                <fullName>Closed Won: Have a signed order from the customer</fullName>
            </value>
            <value>
                <fullName>Closed Lost: PGi not awarded new business/customer did not renew existing contract</fullName>
            </value>
            <value>
                <fullName>Abandoned: PGi decided not to continue pursuing the business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>