force-app/main/default/objects/Opportunity/fields/Opportunity_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Deal_Type__c</fullName>
    <label>Opportunity Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Down-Sell (Rev Decrease)</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Renewal (No Rev Change)</fullName>
            </value>
            <value>
                <fullName>Up-Sell (Rev Increase)</fullName>
            </value>
            <value>
                <fullName>Win Back</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
                <label>Existing Customer - Run Rate</label>
            </value>
            <value>
                <fullName>Existing Customer - New Div</fullName>
            </value>
            <value>
                <fullName>Existing Customer - New Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>