force-app/main/default/objects/Opportunity/fields/Opportunity_Product_Families__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Families__c</fullName>
    <description>Used in the trigger - Populate Opportunity Product Families</description>
    <label>Opportunity Product Families</label>
    <length>200</length>
    <type>Text</type>
</CustomField>