force-app/main/default/objects/Opportunity/fields/Opportunity_Source_Close__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source_Close__c</fullName>
    <label>Opportunity Source Close</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Hoovers</fullName>
            </value>
            <value>
                <fullName>iMeet Sales Accelerator</fullName>
            </value>
            <value>
                <fullName>LinkedIn Sales Navigator</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Zoom Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>