force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <inlineHelpText>Deployment - New:  New deploy&apos;t of SfB, a migration to a new version or switching on Voice from an existing deployment
Deployment - Add Users: Expanding an existing deployment to more users
Ad-Hoc : Deploy&apos;t has already taken place &amp; not above</inlineHelpText>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deployment - New</fullName>
            </value>
            <value>
                <fullName>Deployment - Additional Users</fullName>
            </value>
            <value>
                <fullName>Deployment - Upgrade</fullName>
            </value>
            <value>
                <fullName>Ad-hoc Modality Products &amp; Services</fullName>
            </value>
            <value>
                <fullName>Development Only</fullName>
            </value>
            <value>
                <fullName>Applications Only</fullName>
            </value>
            <value>
                <fullName>Support Only</fullName>
            </value>
            <value>
                <fullName>Third Party Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>