force-app/main/default/objects/Opportunity/fields/Opt_Out_of_Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_of_Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents the renewal opportunity from auto generating.</description>
    <inlineHelpText>Prevents the renewal opportunity from auto generating.</inlineHelpText>
    <label>Opt Out of Auto Renewal</label>
    <type>Checkbox</type>
</CustomField>