force-app/main/default/objects/Opportunity/fields/Orginal_Creator__c.field-meta.xml
<CustomField>
    <fullName>Orginal_Creator__c</fullName>
    <label>Original Creator</label>
    <length>55</length>
    <type>Text</type>
</CustomField>