force-app/main/default/objects/Opportunity/fields/Other_Won_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Won_Reason__c</fullName>
    <description>If the Primary, Secondary or Tertiary Won Reason is &quot;Other&quot;, the rep is required to fill out this field with an explanation of the won reason.</description>
    <inlineHelpText>If the Primary, Secondary or Tertiary Won Reason is &quot;Other&quot;, the rep is required to fill out this field with an explanation of the won reason.</inlineHelpText>
    <label>x-Other Won Reason</label>
    <type>TextArea</type>
</CustomField>