force-app/main/default/objects/Opportunity/fields/Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region__c</fullName>
    <label>Owner&#39;s Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>