force-app/main/default/objects/Opportunity/fields/Owner_s_Company__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Company__c</fullName>
    <formula>Text(Owner.Company__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Company</label>
    <type>Text</type>
</CustomField>