force-app/main/default/objects/Opportunity/fields/Owner_Score_O__c.field-meta.xml
<CustomField>
    <fullName>Owner_Score_O__c</fullName>
    <description>This is to track the record owners due diligence on the record</description>
    <label>Owner Score (O)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>