force-app/main/default/objects/Opportunity/fields/Partner_Rep__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Partner Rep)</relationshipLabel>
    <relationshipName>OpportunitiesviaPartnership</relationshipName>
    <type>Lookup</type>
</CustomField>