force-app/main/default/objects/Opportunity/fields/PartnerRepsPhone__c.field-meta.xml
<CustomField>
    <fullName>PartnerRepsPhone__c</fullName>
    <formula>Partner_Rep__r.Phone</formula>
    <label>Partner Rep&apos;s Phone</label>
    <type>Text</type>
</CustomField>