force-app/main/default/objects/Opportunity/fields/PGi_Account__c.field-meta.xml
<CustomField>
    <fullName>PGi_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PGi Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (PGi Account)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>