force-app/main/default/objects/Opportunity/fields/PGiCompany__c.field-meta.xml
<CustomField>
    <fullName>PGiCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PGi Company</label>
    <referenceTo>PGi_Company__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>