force-app/main/default/objects/Opportunity/fields/PGiEntity__c.field-meta.xml
<CustomField>
    <fullName>PGiEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PGi Entity</label>
    <referenceTo>PGi_Entity__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>