force-app/main/default/objects/Opportunity/fields/PO_Raising_Process_Understood__c.field-meta.xml
<CustomField>
    <fullName>PO_Raising_Process_Understood__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Raising Process Understood</label>
    <type>Checkbox</type>
</CustomField>