force-app/main/default/objects/Opportunity/fields/POC_Estimated_End__c.field-meta.xml
<CustomField>
    <fullName>POC_Estimated_End__c</fullName>
    <description>Only to be populated in POC won records</description>
    <inlineHelpText>Only to be populated in POC won records</inlineHelpText>
    <label>POC Estimated End</label>
    <type>Date</type>
</CustomField>