force-app/main/default/objects/Opportunity/fields/POC_Health__c.field-meta.xml
<CustomField>
    <fullName>POC_Health__c</fullName>
    <description>Only to be populated in POC won records</description>
    <inlineHelpText>Only to be populated in POC won records</inlineHelpText>
    <label>POC Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>