force-app/main/default/objects/Opportunity/fields/POC_Strategy__c.field-meta.xml
<CustomField>
    <fullName>POC_Strategy__c</fullName>
    <description>Only to be populated in POC won records</description>
    <inlineHelpText>Only to be populated in POC won records</inlineHelpText>
    <label>POC Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Controlled</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Custom Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>