force-app/main/default/objects/Opportunity/fields/POC_Update_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>POC_Update_Next_Steps__c</fullName>
    <description>Only to be populated in POC won records</description>
    <inlineHelpText>Only to be populated in POC won records</inlineHelpText>
    <label>POC Update/Next Steps</label>
    <length>100</length>
    <type>Text</type>
</CustomField>