force-app/main/default/objects/Opportunity/fields/Pricing_Approval_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Approval_Due_Date__c</fullName>
    <label>Pricing Approval Due Date</label>
    <type>Date</type>
</CustomField>