force-app/main/default/objects/Opportunity/fields/Pricing_Document_Sent__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Document_Sent__c</fullName>
    <inlineHelpText>For Document Requirements, Reference the Contracts Policy Manual.</inlineHelpText>
    <label>Pricing Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Addendum (Signed)</fullName>
            </value>
            <value>
                <fullName>Contract (Sign/Counter-Sign)</fullName>
            </value>
            <value>
                <fullName>Pricing Agreement (Signed)</fullName>
            </value>
            <value>
                <fullName>Quote (No Signature)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>