force-app/main/default/objects/Opportunity/fields/Primary_Contact_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores the Primary Contact role&apos;s email opt out</description>
    <label>Primary Contact Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>