force-app/main/default/objects/Opportunity/fields/Primary_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_ID__c</fullName>
    <description>Stores the ID of the Primary Contact associated</description>
    <label>Primary Contact ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>