force-app/main/default/objects/Opportunity/fields/Primary_Contact_Last_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Last_Survey_Sent__c</fullName>
    <label>Primary Contact Last Survey Sent</label>
    <type>Date</type>
</CustomField>