force-app/main/default/objects/Opportunity/fields/Primary_Contact_s_Buyer_Persona__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_s_Buyer_Persona__c</fullName>
    <label>Primary Contact&#39;s Buyer Persona</label>
    <length>100</length>
    <type>Text</type>
</CustomField>