force-app/main/default/objects/Opportunity/fields/Primary_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Role__c</fullName>
    <label>Primary Contact&apos;s Role</label>
    <length>30</length>
    <type>Text</type>
</CustomField>