force-app/main/default/objects/Opportunity/fields/Primary_Won_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Won_Reason__c</fullName>
    <label>Primary Won Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Add-on or Renewal</fullName>
            </value>
            <value>
                <fullName>Customer Support Model</fullName>
            </value>
            <value>
                <fullName>Pricing Structure</fullName>
            </value>
            <value>
                <fullName>Relationship Loyalty</fullName>
            </value>
            <value>
                <fullName>Reliability of the Service</fullName>
            </value>
            <value>
                <fullName>Reseller Only - Undisclosed</fullName>
            </value>
            <value>
                <fullName>Superior Product Functionality</fullName>
            </value>
            <value>
                <fullName>Value for Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>