force-app/main/default/objects/Opportunity/fields/PriortoPC__c.field-meta.xml
<CustomField>
    <fullName>PriortoPC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An admin field only, used to mark Closed Won opptys if Closed Won before 5/13 so that business can still modify the Closed Won deals that don&#39;t have Primary Contact</description>
    <label>Prior to Primary Contact Rule</label>
    <type>Checkbox</type>
</CustomField>